--- a/src/resources/elements/photo-strip.html
+++ b/src/resources/elements/photo-strip.html
@@ -1,6 +1,7 @@
 <template>
     <require from='./photo-strip.css'></require>
     <div class="row slides-list" css="height: ${height}px;width: ${width};margin-left:auto;margin-right:auto;z-index:0;">
+        <help style="position:absolute;bottom:0px;" topic.bind="photo-strip" position="right"></help>
         <div if.bind="settings.arrows" class="slide-control next" click.trigger="next_slide($event)"><i class="fa fa-chevron-right fa-3x"></i></div>
         <div if.bind="settings.arrows"class="slide-control prev" click.trigger="prev_slide($event)"><i class="fa fa-chevron-left fa-3x"></i></div>
 
