--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -7,7 +7,9 @@
                 <help if.bind="!user.editing" topic="annnotated-photo" position="bottom" class="side-tool help"></help>
                 <help if.bind="user.editing" topic="annnotated-photo-editing" position="bottom" class="side-tool help"></help>
             <!--/div-->
-            <button aubs-tooltip="text.bind:highlight_all" class="side-tool highlighter"click.trigger="toggle_highlighting($event)"><i class="fa fa-lg fa-circle-o"></i></button>
+            <button aubs-tooltip="text.bind:highlight_all" class="side-tool highlighter"click.trigger="toggle_highlighting($event)">
+                <i class="fa fa-lg fa-circle${highlighting ? '' :'-o'}"></i>
+            </button>
             <button aubs-tooltip="text.bind:jump_to_story_page" class="side-tool story"click.trigger="jump_to_photo_page($event)"><i class="fa fa-lg fa-bars"></i></button>
             <button dir="rtl" repeat.for="face of faces" click.trigger="handle_face(face, $event, $index)" interact-draggable
                 class="face" 
@@ -23,6 +25,9 @@
                     </span>
                 </span>
             </button>
+            <span css="position:absolute;color:white;direction:rtl;width:${slide.width}px;float:right;">
+                ${photo_info.name}.&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;${'photos.photographer' | t}:&nbsp;${photo_info.photographer}.
+            </span>
         </div>
     </div>
 
