--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -66,7 +66,8 @@
                     </div>
                 </div>
                 <div class="col-md-3">
-                    <div class="row" style="margin-bottom:15px;">
+                    <div class="row" style="margin-bottom:15px;position:relative;">
+                        <help topic="tags" position="bottom" style="position:absolute;left:2px;top:2px;"></help>
                         <multi-select options.bind="topic_list" 
                             settings.bind="options_settings" 
                             name="topics" 
