--- a/src/home/home.html
+++ b/src/home/home.html
@@ -54,10 +54,9 @@
             <h2 style="margin:0;">${'home.messages' | t}
                 <span class="is-link" style="float:left" if.bind="user.editing" click.delegate="add_message()"><i class="fa fa-plus-square-o"></i></span>
             </h2>
-            <ul style="padding:0;float:right;height:250px;overflow:auto;">
+            <ul class="message">
                 <li repeat.for="msg of message_list" dir="rtl" >
                     <editable story.bind="msg" settings.bind="{show_date:true}"></editable>
-                    <!--<span style="text-align:right;float:right;">${msg.name}</span>-->
                 </li>
             </ul>
         </div>
