--- a/src/app.html
+++ b/src/app.html
@@ -25,7 +25,7 @@
                             </ul>
 
                             <ul class="nav navbar-nav navbar-right">
-                                <li class="loader" if.bind="router.isNavigating">
+                                <li class="loader" if.bind="api.pending">
                                     <i class="fa fa-spinner fa-spin fa-2x"></i>
                                 </li>
                             </ul>
@@ -48,8 +48,8 @@
     </div>
             <div id="footer" css="border:none;background-color:rgba(0,0,0,0);margin:0;padding:0;bottom:0px;width:100%;">
                 <div class="footer-area" style="padding-left:200px;padding-top:30px;background-color:rgba(80,80,80,0.3);">
-                    <div style="width:400px;margin-right:auto;margin-left:auto;"
-                    <a style="cursor:pointer;color:gray;" click.delegate="contact_us()">Built by Lifestone</a>
+                    <div style="width:400px;margin-right:auto;margin-left:auto;">
+                        <a style="cursor:pointer;color:gray;" click.delegate="contact_us()">Built by Lifestone</a>
                     </div>
                 </div>
             </div>
