--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -3,14 +3,13 @@
     <div class="slide" click.delegate="mark_face($event)" id="full-size-photo" style="z-index:0;margin-left:32px;">
         <div class="slide" click.delegate="mark_face($event)" css="height: ${slide.height}px; width:${slide.width}px;">
             <img src="${slide.src}" height="${slide.height}" width="${slide.width}" />
-            <!--div class="side-tool help"-->
-                <help if.bind="!user.editing" topic="annnotated-photo" position="bottom" class="side-tool help"></help>
-                <help if.bind="user.editing" topic="annnotated-photo-editing" position="bottom" class="side-tool help"></help>
-            <!--/div-->
-            <button aubs-tooltip="text.bind:highlight_all" class="side-tool highlighter"click.trigger="toggle_highlighting($event)">
+            <help if.bind="!user.editing" topic="annnotated-photo" position="bottom" class="side-tool help"></help>
+            <help if.bind="user.editing" topic="annnotated-photo-editing" position="bottom" class="side-tool help"></help>
+            <button aubs-tooltip="text.bind:highlight_all" class="side-tool highlighter" click.trigger="toggle_highlighting($event)">
                 <i class="fa fa-lg fa-circle${highlighting ? '' :'-o'}"></i>
             </button>
-            <button aubs-tooltip="text.bind:jump_to_story_page" class="side-tool story"click.trigger="jump_to_photo_page($event)"><i class="fa fa-lg fa-bars"></i></button>
+            <button aubs-tooltip="text.bind:jump_to_story_page" class="side-tool story" click.trigger="jump_to_photo_page($event)"><i class="fa fa-lg fa-bars"></i></button>
+            <copy-to-clipboard if.bind="user.editing" class="side-tool copy-to-clipboard" content.bind="photo_url"></copy-to-clipboard>
             <button dir="rtl" repeat.for="face of faces" click.trigger="handle_face(face, $event, $index)" interact-draggable
                 class="face" 
                 id.bind="'face-' + face.member_id"
