--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -92,7 +92,7 @@
                     <div class="row" style="margin-top: 20px;" if.bind="user.isLoggedIn">
                         <form role="form">
                             <select value.bind="params.selected_uploader" style="height:32px;width:90%;" change.delegate="handle_change($event)">
-                                <option repeat.for="option of uploader_options" model.bind="option">${option.name}</option>
+                                <option repeat.for="option of uploader_options" model.bind="option.value">${option.name}</option>
                             </select>
                         </form>
                     </div>
