timeline started. style matters.

--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -117,6 +117,9 @@
 
                 </div>
             </div>
+            <div if.bind="user.privileges.DEVELOPER" class="row">
+                <timeline></timeline>
+            </div>
         </div>
     </section>
 </template>
