--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -14,7 +14,7 @@
                 <li repeat.for="option of grouped_selected_options" class="selected" css="width:${inner_width}px;">
                     <div class="option-item" css="margin:0;padding:0;width:${inner_width}px">
                         <span class="span-a">
-                            <a click.trigger="toggle_selection(option)" aubs-tooltip="text.bind:option.names; position:top;class:ms-tooltip;">
+                            <a click.trigger="toggle_selection(option)" aubs-tooltip="text.bind:option.names; position:right;class:ms-tooltip;">
                                 ${option.name}
                             </a>
                         </span>
