--- a/src/home/home.html
+++ b/src/home/home.html
@@ -55,7 +55,7 @@
                 <span class="is-link" style="float:left" if.bind="user.editing" click.delegate="add_message()"><i class="fa fa-plus-square-o"></i></span>
             </h2>
             <ul class="message" style="margin:0;padding:0;">
-                <li repeat.for="msg of message_list" dir="rtl" >
+                <li repeat.for="msg of message_list" dir="rtl" style="border-bottom: solid 2px gray;margin-bottom:10px;" >
                     <editable story.bind="msg" settings.bind="{show_date:true}"></editable>
                 </li>
             </ul>
