email, not user_email...

--- a/src/user/login.html
+++ b/src/user/login.html
@@ -8,7 +8,7 @@
                 <div class="panel-body" style="max-width:300px;">
                     <form role="form">
                         <div class="form-group">
-                            <input required type="email" name="email" id="email" class="form-control input-sm lowercase" value.bind="loginData.user_email"
+                            <input required type="email" name="email" id="email" class="form-control input-sm lowercase" value.bind="loginData.email"
                                 t="[placeholder]user.email-address">
                         </div>
                         <div class="form-group">
