--- a/src/resources/elements/chats/chatroom.html
+++ b/src/resources/elements/chats/chatroom.html
@@ -1,45 +1,32 @@
 <template>
-    <div class="row" dir="rtl">
-        <div class="col-md-4">
-        </div>
-        <div class="col-md-1" style="padding-top:5px;">
-            <a href ng-show="chatrooms.length > chats_per_page" ng-click="move_left()" ng-disabled="! can_move_left()">
-                <i class="fa fa-chevron-left fa-lg"></i>
-            </a>
-        </div>
-        <div class="col-md-2" style="text-align:center">
-            <h3 style="margin-top: 0">{{T.chats}}</h3>
-        </div>
-        <div class="col-md-1" ng-if="privileges.CHAT_MODERATOR" style="padding-top:5px;">
-            <a href style="padding:0;margin:0;height:32px;float:left;" ng-click="add_chatroom()">
-                <i class="fa fa-2x" ng-class="{'fa-floppy-o' : new_chatroom_name_visible, 'fa-plus' : ! new_chatroom_name_visible}"></i>
-            </a>
-        </div>
-        <div class="col-md-2" style="text-align:center" ng-show="new_chatroom_name_visible">
+    <div style="background-color: lightgray;">
+        <div class="row">
             <form class="form-horizontal" role="form">
-                <div class="col-md-3" style="margin:5px;">
-                    <input style="font-size: 95%;margin-bottom:3px;float: left;width: 200px;height:28px;" dir="rtl" 
-                        type="text" ng-model="new_chatroom_name" placeholder="enter chatroom name" 
-                        class="form-control input-small" />
-               </div>
-            </form>
-        </div>
-        <div class="col-md-1" style="padding-top:5px;">
-            <a href ng-show="chatrooms.length > chats_per_page" ng-click="move_right()" ng-disabled="! can_move_right()" >
-                <i class="fa fa-chevron-right fa-lg"></i>
-            </a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div ng-repeat="chatroom in chatrooms track by $index">
-                <div ng-include="'/gbs/static/ng/templates/chatroom.html'" 
-                    ng-show="first_chatroom_number <= $index && $index < first_chatroom_number + chats_per_page"
-                    ng-controller="ChatCtrl"
-                    ng-if="true"
-                    onload="room_number=chatroom.id;room_index=$index;read_chatroom()"
-                    class="col-md-3" >
+                <div class="col-md-5" style="margin:5px;">
+                    <input style="font-size: 95%;margin-bottom:3px;float: left;width: 100%;" dir="rtl" type="text" model.bind="messages_filter"
+                        t="[placeholder]enter-search-words}" class="form-control input-small" />
                 </div>
+                <div class="col-md-6">
+                    <h4 style="width:100%;">${chatroom_name}</h4>
+                </div>
+            </form>
+            <div class="row">
+                <div class="col-sm-12" scroll-glue style="padding:10px;" id="scroll-area">
+                    <ul>
+                        <li repeat.for="msg of messages | filter: messages_filter" style="margin-bottom: 15px;">
+                            <span style="font-weight:bold;">${msg.timestamp}: ${msg.sender_name}</span><br/>
+                            <span innerhtml.bind="msg.message"></span><br/>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <form role="form" style="padding:12px;">
+                    <textarea rows="3" t="[placeholder]enter-your-message}" style="width:100%;" model.bind="info.user_message" />
+                    <a class="btn btn-primary btn-block" click.trigger="send_message()">${chats.send-message}</a>
+                </form>
             </div>
         </div>
     </div>
