--- a/src/resources/elements/timeline.html
+++ b/src/resources/elements/timeline.html
@@ -1,17 +1,22 @@
 <template>
     <require from="./timeline.css"></require>
-    <div css="width: ${timeline_width}px;">
+    <div css="width: ${timeline_width}px;position:relative;">
+        <span style="float:right;position:absolute;top:-40px;font-size:130%;">${'select-years-range' | t}&nbsp;<help topic='select-years-range'></help></span>
         <ul class="timeline-stoppers-box">
-            <li style="float:left">
-                ${first_year}
-            </li>
-            <li style="float:right">
-                ${last_year}
+            <li repeat.for="side of sides" css="left:${side=='left' ? first_year_position : last_year_position}px;" 
+                id="stopper-${side}"
+                interact-draggable
+                interact-dragmove.delegate="dragmove(side, $event)" 
+                interact-dragstart.delegate="dragstart(side, $event)" 
+                interact-dragend.delegate="dragend(side, $event)">
+                ${side=='left' ? first_year : last_year}
             </li>
         </ul>
         <br>
         <ul class="timeline-box">
-            <li aubs-tooltip="text.bind:item.title;position:bottom;" class="timeline-item item.cls" repeat.for="item of items">
+            <li aubs-tooltip="text.bind:item.year;position:bottom;" 
+                class="timeline-item ${first_year <= item.year && item.year < last_year ? 'in-range' : ''}"
+                repeat.for="item of items">
             </li>
         </ul>
     </div>
