--- a/src/resources/elements/timeline.html
+++ b/src/resources/elements/timeline.html
@@ -1,9 +1,10 @@
 <template>
     <require from="./timeline.css"></require>
     <div css="width: ${timeline_width}px;position:relative;">
-        <span style="float:right;position:absolute;top:-40px;font-size:130%;">${'select-years-range' | t}&nbsp;<help topic='select-years-range'></help></span>
+        <span style="float:right;position:absolute;top:-30px;font-size:130%;">${'select-years-range' | t}&nbsp;<help topic='select-years-range'></help></span>
         <ul class="timeline-stoppers-box">
-            <li repeat.for="side of sides" css="left:${side=='left' ? first_year_position : last_year_position}px;" 
+            <li repeat.for="side of sides" css="left:${side=='left' ? first_year_position : last_year_position}px;"
+                aubs-tooltip="text.bind:drag_me;position:top;"
                 id="stopper-${side}"
                 interact-draggable
                 interact-dragmove.delegate="dragmove(side, $event)" 
