--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -103,7 +103,7 @@
                             click.trigger="toggle_link_class()" t="[title]stories.older-links">
                             <i class="fa fa-link fa-xs"></i>
                         </button>
-                        <button class="btn btn-${params.link_class} btn-xs ${params.deleted_stories ? 'active' : ''}" 
+                        <button class="btn btn-xs ${params.deleted_stories ? 'active' : ''}" 
                             click.trigger="toggle_deleted_stories()" t="[title]stories.undelete">
                             <i class="fa fa-trash fa-rotate-180 fa-xs"></i>
                         </button>
