update topic list according to active story types

--- a/src/app.html
+++ b/src/app.html
@@ -24,8 +24,8 @@
                                 </li>
                             </ul>
 
-                            <ul class="nav navbar-nav navbar-right">
-                                <li class="loader" if.bind="api.pending" style="padding-top:16px;">
+                            <ul class="nav navbar-nav navbar-right" style="position:relative;">
+                                <li class="loader" if.bind="api.pending" style="padding-top:16px;position:absolute;left:-10px;">
                                     <i class="fa fa-spinner fa-spin fa-2x"></i>
                                 </li>
                             </ul>
