--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -8,7 +8,7 @@
             </h3>
             <copy-to-clipboard if.bind="user.editing" content.bind="story_url" style="float:left;"></copy-to-clipboard>
         </div>
-        <div class="row">
+        <div class="row" style="direction:rtl;">
             <div class="col-md-5" style="padding-left:40px;">
                 <photo-strip source.bind="source" height.bind="220" action_key="Zoom" settings.bind="{arrows:true, height:220}"></photo-strip>
                 <div class="row" style="height:fit-content;font-size:150%;padding:12px;margin-top: 20px;">
