--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -14,7 +14,7 @@
             </form>
         </div>
         <div class="row">
-            <div class="col-md-7" style="padding-left:40px;">
+            <div class="col-md-7" style="padding-left:40px;" click.trigger="open_full_size_photo()">
                 <img src.bind="photo_src" width="${photo_width}" />
             </div>
             <div class="col-md-5">
