--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -1,17 +1,4 @@
 <template>
-    <div class="btn-group dropdown" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="user.privileges.DEVELOPER" >
-        <button class="btn btn-default dropdown-toggle" aubs-dropdown-toggle>
-            <i class="fa fa-cog"></i>
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu dropdown-menu-left">
-            <li><a class="dropdown-item" href="#" click.trigger="reindex_words()">Reindex Words</a></li>
-            <li><a class="dropdown-item" href="javascript:void(0)">Second Action</a></li>
-            <li><a class="dropdown-item" href="javascript:void(0)">Third Action</a></li>
-            <li class="divider"></li>
-            <li><a class="dropdown-item" href="javascript:void(0)">Separated Action</a></li>
-        </ul>
-    </div>
     <a href if.bind="! user.isLoggedIn" click.trigger="login()" class="border-right" style="text-decoration:none;color:black">
         <i class="fa fa-play"></i>
         ${'user.login' | t}
@@ -22,27 +9,32 @@
         ${'user.logout' | t}
     </a>
 
-    <a if.bind="user.isLoggedIn && user.privileges.EDITOR" href click.trigger="toggle_edit_mode()" t="[title]user.can-edit" class="border-right">
+    <a if.bind="user.privileges.EDITOR" href click.trigger="toggle_edit_mode()" t="[title]user.can-edit" class="border-right">
         <i class="fa fa-lg ${user.editing ? 'fa-eye' : 'fa-pencil' }"></i>
     </a>
 
-    <a if.bind="user.isLoggedIn && user.privileges.ADMIN" href click.trigger="manage_users()" t="[title]user.manage-users" class="border-right">
-        <i class="fa fa-lg fa-cogs"></i>
-    </a>
-
-    <a if.bind="user.isLoggedIn && user.privileges.PHOTO_UPLOADER" href click.trigger="upload_files()" t="[title]user.upload-files" class="border-right">
+    <a if.bind="user.privileges.PHOTO_UPLOADER" href click.trigger="upload_files()" t="[title]user.upload-files"
+        class="border-right">
         <i class="fa fa-lg fa-upload"></i>
     </a>
+
+    <a if.bind="user.privileges.CHATTER" href click.trigger="chat_rooms()" t="[title]user.chat-rooms"
+        class="border-right">
+        <i class="fa fa-lg fa-group"></i>
+    </a>
+
     <div class="btn-group dropdown" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" 
-        if.bind="user.privileges.HELP_AUTHOR"  title="Manage help messages">
+        if.bind="user.privileges.HELP_AUTHOR ||user.privileges.ADMIN || user.privileges.DEVELOPER || user.privileges.ACCESS_MANAGER"
         <button class="btn btn-default dropdown-toggle" aubs-dropdown-toggle>
-            <i class="fa fa-cog"></i><i class="fa fa-question"></i>
+            <i class="fa fa-cog"></i>
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-left">
-            <li><a class="dropdown-item" href="#" click.trigger="save_help_messages()">Save help messages</a></li>
-            <li><a class="dropdown-item" href="#" click.trigger="load_help_messages()">Load help messages</a></li>
+            <li if.bind="user.privileges.HELP_AUTHOR"><a class="dropdown-item" href="#" click.trigger="save_help_messages()">Save help messages</a></li>
+            <li if.bind="user.privileges.HELP_AUTHOR"><a class="dropdown-item" href="#" click.trigger="load_help_messages()">Load help messages</a></li>
+            <li if.bind="user.privileges.HELP_AUTHOR" class="divider"></li>
+            <li if.bind="user.privileges.DEVELOPER"><a class="dropdown-item" href="#" click.trigger="reindex_words()">Reindex Words</a></li>
+            <li if.bind="user.privileges.ACCESS_MANAGER" t="[title]user.manage-users"><a class="dropdown-item" href="#" click.trigger="manage_users()">Manage Users</a></li>
         </ul>
     </div>
-
 </template>
