--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -58,7 +58,9 @@
             </ul>
         </div>
         <!-- Under the line come all unselected options -->
-        <div class="row options unselected" css="max-height:${height_unselected}px;" if.bind="options && options.length > 0">
+        <div class="row options unselected" 
+            css="max-height:${height_unselected}px;" 
+            if.bind="options && options.length > 0 && (filter.length > 1 || ! settings.show_only_if_filter)">
             <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
                 <li repeat.for="option of options | filter: filter : 'name' | filterBySet : all_selected : 'exclude' | take : 199">
                     <div class="option-item" css="margin:0;padding:0;width:${inner_width}px">
