--- a/src/photos/upload-photos.html
+++ b/src/photos/upload-photos.html
@@ -53,14 +53,17 @@
     </div>
     <style>
         h3.success {
-            color:green;
+            background-color: green;
+            color:white;
         }
         h3.errors {
-            color:red;
+            background-color:red;
+            color: white;
         }
         ul.errors {
             list-style-type: none;
-            color: red;
+            background-color: red;
+            color: white;
         }
         ul.errors li {
             float: right;
