help in main page. more.

--- a/src/app.html
+++ b/src/app.html
@@ -35,7 +35,7 @@
                                     <user-mode></user-mode>
                                 </li>
                             </ul>
-
+                            <help if.bind="user.privileges.HELP_AUTHOR || ! user.isLoggedIn" topic="introduction" position="bottom" style="position:absolute;top:12px;"></help>
                         </div>
                     </nav>
 
