--- a/src/resources/elements/help.html
+++ b/src/resources/elements/help.html
@@ -2,7 +2,7 @@
     <button style="border-radius:50%;width:22px;margin:4px;" class="btn btn-info btn-xs" 
         click.delegate="edit_help_message($event)"
         aubs-popover="custom-popover.bind: customPopover;position.bind: position;" >
-        <i class="fa fa-question"></i>
+        <i class="fa fa-${icon}"></i>
     </button>
 
     <div ref="customPopover">
