--- a/src/members/members.html
+++ b/src/members/members.html
@@ -15,7 +15,8 @@
                             <search-input value.bind="filter" placeholder="members.filter"></search-input>
                         </div>
                         <div class="input-group" style="padding-top:16px;">
-                            <select value.bind="order"style="height:36px;" dir="rtl" change.trigger="order_changed($event)">
+                            <select value.bind="order"
+                                style="height:38px;border-top:solid 2px gray;border-left:solid 2px gray" dir="rtl" change.trigger="order_changed($event)">
                                 <option dir="rtl" repeat.for="option of sorting_options" model.bind="option.value">${option.name}</option>
                             </select>
                         </div>
@@ -28,17 +29,44 @@
                                 ${'members.new' & t}
                             </a>
                         </div>
+                        <div class="btn-group dropdown rtl" aubs-dropdown="auto-close.bind: autoClose;" 
+                            style="border:solid 1px lightgray;border-top:solid 2px gray;border-left:solid 2px gray;height:38px;margin-top:16px;padding:6px;padding-top:8px;"
+                            if.bind="user.editing"
+                            <button class="btn btn-default dropdown-toggle" aubs-dropdown-toggle>
+                                <span >${'members.member-groups' | t}</span>
+                                <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu dropdown-menu-left">
+                                <li if.bind="selected_members.size > 0" >
+                                    <a class="dropdown-item" href="#" click.trigger="save_member_group()">
+                                        ${'members.save-member-group' | t}
+                                    </a>
+                                </li>
+                                <li>
+                                    <a class="dropdown-item" href="#" click.trigger="load_member_group()">
+                                        ${'members.load-member-group' | t}
+                                    </a>
+                                </li>
+                                <li if.bind="selected_members.size > 0" >
+                                    <a class="dropdown-item" href="#" click.trigger="clear_member_group()">
+                                        ${'members.clear-member-group' | t}
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </form>
                 </div>
             </div>
 
             <div id="member-list" class="member-list content-area" css="height:${win_height-452}px;">
                 <ul class="list-group">
-                    <li repeat.for="member of members | filter : filter : 'first_name' : 'last_name' : 'former_first_name' : 'former_last_name' : 'nick_name' | take : 3200 | filtervisibility : 0 "
-                        class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''} ${not_ready(member) ? 'not_ready' : ''}"
+                    <li repeat.for="member of members | filter : filter : '*selected' : 'first_name' : 'last_name' : 'former_first_name' : 'former_last_name' : 'nick_name' | take : 3200 | filtervisibility : 0 "
+                        class="list-group-item ${member.id === $parent.selectedId ? 'active' : ''} ${not_ready(member) ? 'not_ready' : ''} ${member.selected}"
                         dir="rtl">
-                        <a route-href="route: member-details; params.bind: {id:member.id}" disabled.bind="not_ready(member)" style="color:black;">
-                            <img src.bind="member.facePhotoURL" aubs-tooltip="text.bind:member.title" />
+                        <a click.trigger = "member_clicked(member, $event)"
+                            disabled.bind="not_ready(member)" style="color:black;">
+                            <img src.bind="member.facePhotoURL" aubs-tooltip="text.bind:member.title" 
+                                css="border: ${member.selected ? '6px solid green' : 'none'}" />
                             <h6 dir="rtl" class="list-group-item-heading" >${member.name}</h6>
                         </a>
                     </li>
